# 01-rcli

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml  test.http
.github/workflows/: build.yml
fixtures/: b64.txt  ed25519.pk  ed25519.sk  p32.txt
src/: lib.rs  main.rs  opts.rs  process.rs  util.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  mod.rs  text.rs
