[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
authors = ["ono <yue16321@163.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.4", features = ["http2"] }
base64 = "0.22.1"
blake3 = "1.8.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.35", features = ["derive"] }
csv = "1.3.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
zxcvbn = "3.1.0"
